@@ -437,11 +437,12 @@ public class Foo {
     <rule  name="AvoidThreadGroup"
     		 language="java"
       since="3.6"
-      message="Avoid using ThreadGroup; it is not thread safe"
+      message="Avoid using java.lang.ThreadGroup; it is not thread safe"
       class="net.sourceforge.pmd.lang.rule.XPathRule"
-      externalInfoUrl="http://pmd.sourceforge.net/rules/java/basic.html#AvoidThreadGroup">
+      externalInfoUrl="http://pmd.sourceforge.net/rules/java/basic.html#AvoidThreadGroup"
+      typeResolution="true">
       <description>
-Avoid using ThreadGroup; although it is intended to be used in a threaded environment
+Avoid using java.lang.ThreadGroup; although it is intended to be used in a threaded environment
  it contains methods that are not thread safe.
       </description>
       <priority>3</priority>
@@ -449,7 +450,7 @@ Avoid using ThreadGroup; although it is intended to be used in a threaded enviro
         <property name="xpath">
         <value>
 <![CDATA[
-//AllocationExpression/ClassOrInterfaceType[contains(@Image,'ThreadGroup')] |
+//AllocationExpression/ClassOrInterfaceType[pmd-java:typeof(@Image, 'java.lang.ThreadGroup')]|
 //PrimarySuffix[contains(@Image, 'getThreadGroup')]
 ]]>
         </value>
@@ -457,6 +458,7 @@ Avoid using ThreadGroup; although it is intended to be used in a threaded enviro
       </properties>
       <example>
     <![CDATA[
+    import java.util.ThreadGroup;
     public class Bar {
      void buz() {
       ThreadGroup tg = new ThreadGroup("My threadgroup") ;
@@ -740,6 +742,33 @@ public class Foo {
         ]]>
         </example>
     </rule>
+	<rule name="CatchSubClassBeforeSuperClass"
+			language="java"
+			since="5.0"
+			message="A subclass ''{0}'' must come before its superclass ''{1}'' in a series of catch statements."
+			class="net.sourceforge.pmd.lang.java.rule.basic.CatchSubClassBeforeSuperClassRule"
+			externalInfoUrl="http://pmd.sourceforge.net/rules/java/basic.html#CatchSubClassBeforeSuperClass">
+		<description>A subclass must come before its superclass in a series of catch statements.  If not, the subclass catch will never be reached.</description>
+		<priority>1</priority>
+		<example>
+		<![CDATA[
+public class Foo {
+	public static void main(String[] args) {
+		try {
+			int a = 0;
+			int b = 33/a;
+		} catch(Exception e) {
+			System.out.println("Generic exception catch");
+		} catch(ArithmeticException e) {
+			// This catch never reached because ArithmeticException is a subclass of Exception.
+			// To fix the problem reverse the order of catch statements.
+			System.out.println("This is never catched");
+		}
+	}
+}
+]]>
+		</example>
+	</rule>
 
     <rule deprecated="true" ref="rulesets/java/empty.xml/EmptyCatchBlock" />
     <rule deprecated="true" ref="rulesets/java/empty.xml/EmptyIfStmt" />
